--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -37,11 +37,56 @@ body {
   width: 50%;
 }
 
+.button {
+  padding: 2rem;
+  font-size: 1.4rem;
+  font-family: 'Spartan', sans-serif;
+  color: $desaturated_dark_cyan_color;
+  background-color: transparent;
+  border-radius: 0.4rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 // HEADER 
 .header {
   width: 100%;
   height: 15rem;
   background: url("../../dist/images/bg-header-desktop.svg") $desaturated_dark_cyan_color;
+
+  .header_container {
+    height: 100%;
+    margin: 0 16rem;
+    position: relative;
+
+    .form {
+      display: flex;
+      justify-content: space-between;
+      height: 7rem;
+      width: 100%;
+      position: absolute;
+      bottom: -3.5rem;
+      left: 0;
+      right: 0;
+      background-color: $white_color;
+      border-radius: 0.4rem;
+      box-shadow: 0.5rem 0.5rem 2rem -1rem $desaturated_dark_cyan_color;
+  
+      .form_input {
+        height: 100%;
+        width: calc(100% - 13rem);
+        padding: 2rem 4rem;
+        border-radius: 0.4rem;
+        border: none;
+        outline: none;              
+      }
+    }
+  }
 }
 
 // MAIN 
@@ -93,6 +138,11 @@ body {
           h1 {
             font-size: 1.8rem;
             font-weight: 700;
+
+            &:hover {
+              color: $desaturated_dark_cyan_color;
+              cursor: pointer;
+            }
           }
 
           h1, h2 {
@@ -124,6 +174,12 @@ body {
               color: $desaturated_dark_cyan_color;
               background-color: $background_color;
               border-radius: 0.4rem;
+
+              &:hover {
+                color: $white_color;
+                background-color: $desaturated_dark_cyan_color;
+                cursor: pointer;
+              }
             }
           }
         }
