--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -8,6 +8,13 @@
 
         .header_container {
             margin: 0 2.5rem;
+
+            .form {
+
+                .form_input {
+                    padding: 2rem;
+                }
+            }
         }
     }
 
@@ -19,7 +26,7 @@
             .col {
                 position: relative;
                 margin-top: 3rem;
-                padding: 3rem 2rem;
+                padding: 3rem 2rem 1.5rem;
 
                 img {
                     width: 5rem;
