add function to button clear

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -133,6 +133,10 @@ body {
               font-size: 1.2rem;
               text-transform: uppercase;
             }
+
+            .span_bg {
+              background-color: $very_dark_grayish_cyan_color;
+            }
           }
 
           h1 {
