--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -96,13 +96,16 @@ body {
 
   .row {
 
+    .border_left {
+      border-left: 0.4rem solid $desaturated_dark_cyan_color;
+    }
+
     .col {
       display: flex;
       flex-wrap: wrap;
       margin-bottom: 2rem;
       padding: 3rem;
       background-color: $white_color;
-      border-left: 0.4rem solid $desaturated_dark_cyan_color;
       border-radius: 0.4rem;
       box-shadow: 0.5rem 0.5rem 2rem -1rem $desaturated_dark_cyan_color;
 
