--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -91,7 +91,7 @@ body {
 
 // MAIN 
 .main {
-  height: calc(100vh - 15rem);
+  height: calc(100% - 15rem);
   padding: 7rem 16rem;
   background-color: $background_color;
 
